--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,6 @@
-
 fastapi==0.115.2
-uvicorn[standard]==0.30.1
-requests==2.32.3
-beautifulsoup4==4.12.3
-trafilatura==1.7.0
-playwright==1.47.0
+uvicorn[standard]==0.32.0
 python-dotenv==1.0.1
-tiktoken==0.7.0
-numpy==1.26.4
-scikit-learn==1.4.2
-sentence-transformers==3.0.1
-faiss-cpu==1.8.0
-chromadb==0.5.5
+sse-starlette==2.1.0
 openai==1.55.0
-jinja2==3.1.4
+httpx==0.26.0
