--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,14 @@
 fastapi==0.115.2
-uvicorn[standard]==0.32.0
+uvicorn[standard]==0.30.1
+requests==2.32.3
+beautifulsoup4==4.12.3
+trafilatura==1.7.0
+playwright==1.47.0
 python-dotenv==1.0.1
-sse-starlette==2.1.0
+tiktoken==0.7.0
+numpy==1.26.4
+sentence-transformers==3.0.1
+faiss-cpu==1.8.0
+chromadb==0.5.5
 openai==1.55.0
-httpx==0.26.0
+jinja2==3.1.4
