--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-faiss-cpu>=1.9.0.post1,<2.0 ; sys_platform != "win32" and python_version >= "3.9" and python_version < "3.13"
+fastapi==0.115.2
 uvicorn[standard]==0.30.1
 requests==2.32.3
 beautifulsoup4==4.12.3
