--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,7 @@
 # Model & Embeddings
 OPENAI_CHAT_MODEL=gpt-4o-mini   # or gpt-4o
 
-# Alternative local embeddings (optional)
+# Alternative local embeddings
 # E5_MODEL=intfloat/e5-base
 # BGE_MODEL=BAAI/bge-small-en
 
